...
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="4"
        tools:listitem="@layout/repository_item" />

    </com.omadahealth.github.swipyrefreshlayout.library.SwipyRefreshLayout>
</android.support.constraint.ConstraintLayout>
